@@ -1,6 +1,11 @@
 == 0.1.9 (In Git)
 
-Main changes in this release is Autotest support and how multiline strings work in feature files. 
+With this release Cucumber supports 19 natural languages: Arabic, Welsh, Danish, German, Texan, Spanish, Estonian,
+French, Malay, Italian, Japanese, Dutch, Norwegian, Polish, Portuguese, Russian, Swedish and Chinese - all in UTF-8 
+encoding. Thanks a lot to everyone who has contributed translations. If you don't see your language here, please 
+add it: 
+
+Main functional changes in this release is Autotest support and how multiline strings work in feature files. 
 Here is an example om multiline strings:
 
   # In your .feature file
